vcluster_versioned_docs/version-0.35.0/cli/vcluster_restore.md
---
title: "vcluster restore --help"
sidebar_label: vcluster restore
---


Restores a virtual cluster from snapshot

## Synopsis

```
vcluster restore VCLUSTER_NAME [flags]
```

```
#######################################################
################# vcluster restore ####################
#######################################################
Restore a virtual cluster.

Example:
# Restore from oci image
vcluster restore my-vcluster oci://ghcr.io/my-user/my-repo:my-tag
# Restore from s3 bucket
vcluster restore my-vcluster s3://my-bucket/my-bucket-key
# Restore from vCluster container filesystem
vcluster restore my-vcluster container:///data/my-local-snapshot.tar.gz
# Restore a Docker-based vCluster from a local snapshot file
vcluster restore my-vcluster ./my-snapshot.tar.gz --driver docker
# Restore with a different name
vcluster restore my-new-name ./my-snapshot.tar.gz --driver docker
#######################################################
```


## Flags

```
      --azure-resource-group string         Azure resource group where the storage account is located
      --azure-subscription-id string        Azure subscription ID where the storage account is located
      --driver string                       The driver to use for managing the virtual cluster, can be either helm, platform, or docker.
  -h, --help                                help for restore
      --pod-env stringArray                 Additional environment variables for the created pod. Use key=value. E.g.: MY_ENV=my-value
      --pod-image string                    Image to use for the created pod
      --pod-image-pull-secret stringArray   Additional pull secrets for the created pod
      --pod-mount stringArray               Additional mounts for the created pod. Use form <type>:<name>/<key>:<mount>. Supported types are: pvc, secret, configmap. E.g.: pvc:my-pvc:/path-in-pod or secret:my-secret/my-key:/path-in-pod
      --pod-service-account string          Service account to use for the created pod
      --restore-volumes                     Restore volumes from volume snapshots. Deprecated: volume snapshot and restore will be removed in an upcoming release.
      --snapshot-temp-dir string            Temporary directory for snapshot operations. If set to empty string, the OS default directory for temporary files will be used
      --standalone                          Target the local standalone vCluster on this host
```


## Global and inherited flags

```
      --config string       The vcluster CLI config to use (will be created if it does not exist) (default "~/.vcluster/config.json")
      --context string      The kubernetes config context to use
      --debug               Prints the stack trace if an error occurs
      --log-output string   The log format to use. Can be either plain, raw or json (default "plain")
  -n, --namespace string    The kubernetes namespace to use
  -s, --silent              Run in silent mode and prevents any vcluster log output except panics & fatals
```

